crates/shuffle/tests/snapshots/shuffle__partition_filtered_hints.snap
---
source: crates/shuffle/tests/shuffle.rs
expression: snapshot_frontier(&frontier)
---
[
    (
        "testing/apples/2020202020202020/category=alpha/pivot=00",
        0,
        [
            (
                "01:00:00:00:00:01",
                (
                    0,
                    16,
                ),
                (
                    0,
                    0,
                ),
                -258,
            ),
        ],
    ),
    (
        "testing/apples/2020202020202020/category=gamma/pivot=00",
        0,
        [
            (
                "01:00:00:00:00:01",
                (
                    0,
                    16,
                ),
                (
                    0,
                    16,
                ),
                0,
            ),
        ],
    ),
]
