crates/shuffle/tests/snapshots/shuffle__resume_from_checkpoint_phase1.snap
---
source: crates/shuffle/tests/shuffle.rs
expression: snapshot_frontier(&phase1_frontier)
---
[
    (
        "testing/apples/2020202020202020/category=alpha/pivot=00",
        0,
        [
            (
                "01:00:00:00:00:01",
                (
                    0,
                    4,
                ),
                (
                    0,
                    0,
                ),
                -99,
            ),
        ],
    ),
]
