crates/shuffle/tests/snapshots/shuffle__single_producer_outside_txn.snap
---
source: crates/shuffle/tests/shuffle.rs
expression: snapshot_frontier(&frontier)
---
[
    (
        "testing/apples/2020202020202020/category=alpha/pivot=00",
        0,
        [
            (
                "01:00:00:00:00:01",
                (
                    0,
                    4,
                ),
                (
                    0,
                    0,
                ),
                -97,
            ),
        ],
    ),
]
